--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
+#execs
 cgl
 games/battleships
 games/tictactoe
+
+#cmake created files
 CMakeFiles/
 build/
 cmake_install.cmake
 CMakeCache.txt
-*.a
+install_manifest.txt
 Makefile
+#libs
+*.a
