fix CMakeFiles syntax error - install dest of libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ target_link_libraries(battleships strcap cs50)
 
 # Set the output directory for the executables
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/build)
-set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR/libs})
+set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libs)
 
 # Install the cgl executable to /usr/local/bin
 install(TARGETS cgl DESTINATION /usr/local/bin)
