Cmake for build process (#5)
- cmake is better for cross platform support
- automatic compiler detection
- install to /usr/local/bin to use system wide

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+#execs
 cgl
 games/battleships
 games/tictactoe
+
+#cmake created files
+CMakeFiles/
+build/
+cmake_install.cmake
+CMakeCache.txt
+install_manifest.txt
+Makefile
+#libs
+*.a
