final changes for release

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,14 @@
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "compile bships",
             "postDebugTask": "Delete dSYM"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug main",
+            "program": "${workspaceFolder}/build/cgl",
+            "cwd": "${workspaceFolder}",
+            "postDebugTask": "Delete dSYM"
         }
     ]
 }
