--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(cgl main.c)
 
 add_executable(tictactoe games/tictactoe.c)
 add_executable(battleships games/battleships.c)
+add_executable(hangman games/hangman.c)
 
 # Add the libraries
 add_library(strcap STATIC libs/strcap.c)
@@ -19,6 +20,7 @@ add_library(CGLgeneral STATIC libs/CGLgeneral.c)
 target_link_libraries(cgl strcap CGLgeneral)
 target_link_libraries(tictactoe strcap CGLgeneral)
 target_link_libraries(battleships strcap CGLgeneral)
+target_link_libraries(hangman strcap CGLgeneral ncurses)
 
 # Set the output directory for the executables
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/build)
@@ -26,10 +28,10 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/build)
 
 
 # Install the cgl executable to /usr/local/bin
-install(TARGETS cgl tictactoe battleships DESTINATION /usr/local/bin)
+install(TARGETS cgl tictactoe battleships hangman DESTINATION /usr/local/bin)
 
 
 #target_compile_options(tictactoe PRIVATE "-w")
 target_compile_options(tictactoe PRIVATE "-g")
 
-set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Debug)
